--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,66 @@
-# This is a basic workflow to help you get started with Actions
+name: Build GDrive CLI
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+
   build:
-    # The type of runner that the job will run on
+    name: Build
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Set up Go 1.12
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.12
+      id: go
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Check out repository
+      uses: actions/checkout@v2
+
+    - name: Get https://github.com/gdrive-org/gdrive code
+      run: |
+        export GOPATH=$HOME/go
+        export GOBIN=$(go env GOPATH)/bin
+        export PATH=$PATH:$GOPATH
+        export PATH=$PATH:$GOBIN
+        mkdir -p $GOPATH/pkg
+        mkdir -p $GOBIN
+        go get github.com/gdrive-org/gdrive
+
+    - name: Add support for MIPS and MIPSLE
+      run: |
+        cd $HOME/go/src/github.com/prasmussen/gdrive/vendor/github.com/soniakeys/graph
+        sed -i "s/+build 386 arm/+build 386 arm mips mipsle/g" bits32.go
+        sed -i "s/+build \!386,\!arm/+build \!386,\!arm,\!mips,\!mipsle/g" bits64.go
+    
+    - name: Change CLIENT ID & SECRET
+      env:
+        CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      run: |
+        cd $HOME/go/src/github.com/gdrive-org/gdrive/
+        sed -i "s/367116221053-7n0vf5akeru7on6o2fjinrecpdoe99eg.apps.googleusercontent.com/$CLIENT_ID/g" handlers_drive.go
+        sed -i "s/1qsNodXNaWq1mQuBjUjmvhoO/$CLIENT_SECRET/g" handlers_drive.go
+
+    - name: Build
+      run: |
+        cp -r build/* $HOME/go/src/github.com/gdrive-org/gdrive/
+        cd $HOME/go/src/github.com/gdrive-org/gdrive/
+        chmod +x build-selected.sh
+        chmod +x build.sh
+        ./build-selected.sh
+        ls -al _release/bin
+
+    - name: Copy release file
+      run: |
+        mkdir release
+        cp -r $HOME/go/src/github.com/gdrive-org/gdrive/_release/bin/* release
+
+    - name: Save build file to artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: release
+        path: release
